Fixed link to LL parameterized Dashboard in template.

--- a/xapi_client/templates/lrs_query.html
+++ b/xapi_client/templates/lrs_query.html
@@ -19,7 +19,7 @@
     {% if result %}
     <section class="marginT20">
         <h4 class="paddingL20 demiBold text-center">{% trans "URL just computed" %}</h4>
-        <a href="{{ result|safe }}" target="_blank">{{ result }}</a>
+        <a href="{{ result }}" target="_blank">{{ result }}</a>
     </section>
    	{% endif %}
 
