--- a/xapi_client/templates/self_record.html
+++ b/xapi_client/templates/self_record.html
@@ -1,4 +1,4 @@
-{% extends "commons_base.html" %}
+{% extends "base.html" %}
 {% load staticfiles i18n %}
 
 {% block head_title %}{% trans "Record eXperience" %}{% endblock head_title %}
